--- a/assets/css/_settings.scss
+++ b/assets/css/_settings.scss
@@ -6,6 +6,7 @@ $white: #fff;
 $google-blue: #4285f4;
 $button-active-blue: #1669f2;
 $danger: #f14668;
+$github: #242a2e;
 // Font sizes
 $h1: 2.5rem;
 $h2: 2rem;
